# Learning-AI-Agents

./: .gitignore  README.md  main.py  pyproject.toml
02-personal_assistant/: agent.py
03-education_counselor/: README.md
03-education_counselor/agent/: agent.py
04-ecommerce-cart-agent/: README.md  utils.py
05-LeetcodeAgent/: main.py  problem_analysis_log.txt
05-LeetcodeAgent/leetcode_solver_agent/: agent.py
06-system-health-agent/: README.md
08-content-orchestration/: README.md  api_server.py
09-travel-itinerary-agent/: README.md  main.py  pyproject.toml
09-travel-itinerary-agent/agent/: __init__.py  agent.py
09-travel-itinerary-agent/agent/sub_agents/: budget_planner.py  destination_research.py  synthesizer.py
09-travel-itinerary-agent/agent/tools/: __init__.py  activities_lookup.py  flights_lookup.py  hotels_lookup.py  memory.py
1-renovation-agent/: README.md
10-multiagent-system-A2A/: README.md
11-A2A-and-MCP/: README.md
13-leadGenerationAgent/: README.md
14-gemini-cli-inside-agent/: README.md  pyproject.toml
16-personal-expense-agent/: README.md  frontend.py  settings.yaml
17-adk-code-review-assistant/: deploy.sh  pyproject.toml
2-personal_assistant/: README.md
3-education_counselor/: agent.py
4-ecommerce-cart-agent/: README.md  main.py
5-LeetcodeAgent/: README.md  requirements.txt  search_log.txt
6-system-health-agent/: README.md
8-content-orchestration/: .gitignore  pyproject.toml  requirements.txt
8-content-orchestration/content_orchestration/: agent.py  config.py  requirements.txt
8-content-orchestration/content_orchestration/tools/: __init__.py
8-content-orchestration/deployment/: __init__.py  cleanup.py
9-research-assistant-agent/: .gitignore  README.md  api_server.py  example.py  main.py  pyproject.toml  requirements.txt
9-research-assistant-agent/deployment/: local.py  remote.py
9-research-assistant-agent/frontend/: index.html
9-research-assistant-agent/research_assistant/: __init__.py  adk_agent.py  agent.py  config.py
9-research-assistant-agent/research_assistant/subagents/: __init__.py
9-research-assistant-agent/research_assistant/subagents/analyzer_agent/: __init__.py  agent.py
9-research-assistant-agent/research_assistant/subagents/search_agent/: __init__.py  agent.py
9-research-assistant-agent/research_assistant/subagents/synthesizer_agent/: __init__.py  agent.py
9-research-assistant-agent/research_assistant/tools/: __init__.py  search_tools.py
9-travel-itinerary-agent/: README.md  explanation.md  pyproject.toml  requirements.txt  setup.py
personal_assistant/: hotel_search_agent.py
(+82 files in other folders)
