[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-itinerary-planner"
version = "1.0.0"
description = "A multi-agent travel itinerary planner using Google ADK and Apify APIs"
authors = [
    {name = "AI Agent Series", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.16.0",
    "apify-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
